@@ -9,6 +9,7 @@ Date: 8/6/25
     - Added mod setting to change the shapes of ore patches.
   Gui:
     - Improved hex core trade UI.
+    - Made the planet filter buttons in the trade overview more compact.
   Bugfixes:
     - Fixed that some coin sprites would have tooltips with non-integer values while viewing higher quality trades in hex cores.
     - Fixed that hextreme quality was not decreasing the power consumption of beacons like other qualities do.
